Add intro paragraph and image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <p>Wondering what to cook in an air fryer? Find easy recipes for air fried chicken, roasted potatoes, and falafel!</p>
+        <img src="./img/Air-fryer-recipes.jpeg" alt="A picture of an air fryer with delicious food beside it">
         <ol>
             <li><a href="./recipes/falafel.html">Falafel</a></li>
             <li><a href="./recipes/roasted-potatoes.html">Roasted Potatoes</a></li>
