Add description, ingredients and steps

--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -7,5 +7,34 @@
 <body>
     <h1>Falafel</h1>
     <img src="../img/falafel.webp" alt="Falafel on a plate garnished with cilantro">
+    <h2>Description</h2>
+    <p>If you've been on the hunt for the best recipe for falafel in the air fryer, we have great news: You just found it!</p>
+    <p>Once you've soaked your chickpeas, you can use a food processor and an air fryer to quickly bake these spicy falafel patties. Serve with your favorite garnishes and sauce.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 cup dry garbanzo beans</li>
+        <li>1 ½ cups fresh cilantro, stems removed</li>
+        <li>¾ cup fresh flat-leafed parsley, stems removed</li>
+        <li>1 small red onion, quartered</li>
+        <li>1 clove garlic</li>
+        <li>2 tablespoons chickpea flour</li>
+        <li>1 tablespoon ground coriander</li>
+        <li>1 tablespoon ground cumin</li>
+        <li>1 tablespoon sriracha sauce</li>
+        <li>salt and ground black pepper to taste</li>
+        <li>½ teaspoon baking powder</li>
+        <li>¼ teaspoon baking soda</li>
+        <li>cooking spray</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Soak chickpeas in a large amount of cool water for 24 hours. Rub the soaked chickpeas with your fingers to help loosen and remove skins. Rinse and drain well. Spread chickpeas on a large clean dish towel to dry.</li>
+        <li>Blend chickpeas, cilantro, parsley, onion, and garlic in a food processor until a rough paste forms. Transfer mixture to a large bowl. Add chickpea flour, coriander, cumin, sriracha, salt, and pepper and mix well. Cover bowl and let mixture rest for 1 hour.</li>
+        <li>Preheat an air fryer to 375 degrees F (190 degrees C).</li>
+        <li>Add baking powder and baking soda to the chickpea mixture. Mix using your hands until just combined. Form 15 equal-sized balls and press slightly to form patties. Spray falafel patties with cooking spray.</li>
+        <li>Place 7 falafel patties in the preheated air fryer and cook for 10 minutes. Transfer cooked falafel to a plate and repeat with remaining 8 falafel, cooking for 10 to 12 minutes.</li>
+    </ol>
+    <h2>Cook's Note:</h2>
+    <p>Feel free to try harissa sauce in place of the sriracha.</p>
 </body>
 </html>
