--- a/recipes/roasted-potatoes.html
+++ b/recipes/roasted-potatoes.html
@@ -7,5 +7,21 @@
 <body>
     <h1>Roasted Potatoes</h1>
     <img src="../img/potatoes.webp" alt="Roasted potatoes on a plate">
+    <h2>Description</h2>
+    <p>If you want the crispiest potatoes of your life, you should try making them in the air fryer. The air fryer will produce potatoes that are crispy on the outside and tender on the inside in just 15 minutes. So, if you've been on the hunt for the best recipe for roasted potatoes in the air fryer, we have great news: You just found it!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>½ pound mini potatoes</li>
+        <li>2 teaspoons extra-virgin olive oil</li>
+        <li>2 teaspoons dry Italian-style salad dressing mix</li>
+        <li>salt and ground black pepper to taste</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat the air fryer to 400 degrees F (200 degrees C).</li>
+        <li>Wash and dry potatoes. Trim edges to make a flat surface on both ends.</li>
+        <li>Combine extra-virgin olive oil and salad dressing mix in a large bowl. Add potatoes and toss until potatoes are well coated. Place in a single layer into the air fryer basket. Cook in batches if necessary.</li>
+        <li>Air fry until potatoes are golden brown, 5 to 7 minutes. Flip potatoes and air fry for an additional 2 to 3 minutes. Season with salt and pepper.</li>
+    </ol>
 </body>
 </html>
