Add Back to Homepage link

--- a/recipes/chicken-thighs-and-potatoes.html
+++ b/recipes/chicken-thighs-and-potatoes.html
@@ -34,5 +34,6 @@
     <h2>Cook's Notes:</h2>
     <p>If you want you can even swap the seasonings out for a grill marinade packet.</p>
     <p>You may need to cook in batches depending on how big your air fryer is .</p>
+    <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
