--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -36,5 +36,6 @@
     </ol>
     <h2>Cook's Note:</h2>
     <p>Feel free to try harissa sauce in place of the sriracha.</p>
+    <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
